# blackbox-data

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  preview_ui.html  pyproject.toml
bb/: README.md  cli.py
benchmarks/: README.md  load_results.csv  results.json  results_base.csv  results_base.json  results_full.csv  results_full.json  results_opt.csv  results_opt.json  results_opt2.csv  results_opt2.json  results_wide.csv  results_wide.json  run_benchmarks.py  run_load_tests.py  run_security_tests.py  run_stress_tests.py  security_results.csv  stress_results.csv
blackbox/: README.md  __init__.py  cli.py  config.py  context.py  engines.py  hashing.py  recorder.py  seal.py  store.py  util.py
blackbox/integrations/: __init__.py  airflow.py  dagster.py  dbt.py  warehouses.py
blackbox_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blackbox_pro/: README.md  __init__.py  api.py  cli.py  exporter.py  runtime.py
blackbox_pro/server/: api.py  audit.py  auth.py  main.py  metrics.py  notify.py  stats.py  (+3 more)
config/: README.md  warehouses.example.yml
docs/: COMPLIANCE_MAPPING.md  CYBERSECURITY.md  EXEC_SUMMARY.md  FORENSIC_USE_CASES.md  GITHUB_ACTIONS.md  INSTALLATION.md  INTEGRATIONS.md  INTEGRATION_GUIDE.md  LIMITATIONS_AND_ROADMAP.md  NON_TECH_QUICKSTART.md  NOTIFICATIONS.md  RC_RELEASE.md  README.md  RELEASE_NOTES_RC1.md  REPORT_GUIDE.md  SECURITY_AND_SSO.md  SECURITY_POSTURE.md  SIEM_MAPPING.md  SPARK_GUIDE.md  STREAMING_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  deck.md
examples/: README.md  demo_pro.py  demo_spark.py  demo_streaming.py  simple_pipeline.py
scripts/: README.md  capture_screenshots.py  quickstart.ps1  quickstart.sh  run_schemathesis.py  schemathesis_hooks.py  seed_schemathesis.py
tests/: README.md  test_audit_verify.py  test_chain_verify.py  test_diff_rowhash.py  test_end_to_end_local.py  test_engine_conversion.py  test_evidence_verify.py  test_high_level_report.py  test_integrations.py  test_mvp_effectiveness_report.py  test_pro_api.py  test_streaming_microbatch.py  test_tamper_hardening.py
(+3 files in other folders)
